GitVersion1/objects/County_Community_Survey__c.object
<CustomObject>
    <description>Relationship betweem Survey and Counties/Communities/District administrative region</description>
    <fields>
        <fullName>Community_of_Account_Activity_Area__c</fullName>
        <label>Community of Account Activity Area</label>
        <referenceTo>Survey_Segmentation__c</referenceTo>
        <relationshipLabel>County-Community-Surveys</relationshipLabel>
        <relationshipName>County_Community_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Community_Name__c</fullName>
        <formula>Related_Community__r.Community__c</formula>
        <label>Related Community Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Community</label>
        <referenceTo>County_Community_District__c</referenceTo>
        <relationshipLabel>County-Community-Surveys</relationshipLabel>
        <relationshipName>County_Community_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_County_Name__c</fullName>
        <formula>Related_Community__r.County__c</formula>
        <label>Related County Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_District_Name__c</fullName>
        <formula>Related_Community__r.District__c</formula>
        <label>Related District Name</label>
        <type>Text</type>
    </fields>
    <label>County-Community-Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSur-{00000}</displayFormat>
        <label>County-Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County-Community-Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>